--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="#"><span>保健食品</span></a>
             </div>
             <div class="midLogo">
-                <h1><img src="images/logo02.jpg"/></h1>
+                <h1><img src="images/logo02.png"/></h1>
             </div>
             <div class="right">
                 <img src="images/titleLeft.png">
