--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+
+    <!-- 右側固定列表 -->
+    <div class="listLeft">
+        <p>豪的LINE</p>
+        <img src="images/HaoQRcode.jpg" alt=""/>
+        <p>華的LINE</p>
+        <img src="images/HuaQRcode.jpg" alt=""/>
+    </div>
+
+
     <div class="top"><h2>買滿299$全館免運</h2></div>
     <div class="header wrapper">
         <div class="title">
@@ -34,6 +44,10 @@
                 </ul>
             </div>
         </div>
+    </div>
+
+    <div class="footer wrapper">
+
     </div>
 </body>
 </html>
