--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>華華的衣服網站</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="images/logoTitle.ico" type="image/x-icon" />
 </head>
 <body>
 
